[package]
name = "pizza_survivor"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
dev = [
    "bevy/bevy_dylib",
]

[dependencies]
bevy = { version = "0.10", features = ["wav"]}
bevy_rapier2d = { version = "0.21",  features = [ "simd-stable", "debug-render-2d" ] }
bevy-inspector-egui = { version = "0.18.0", default-features = false, features = ["bevy_pbr"] }
bevy_turborand = "0.5"
bevy_easings = "0.10"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }